--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -6,7 +6,7 @@ block content
     hr
     div
       img(src=`${imageUrl}`)
-    h2 #{price}
+    h2 $#{price}
     p #{description}
     form.btn-form(action='/add-to-cart' method='POST')
       button.btn-form__btn(type='submit') Add to Cart
