--- a/views/includes/admin-product-actions.pug
+++ b/views/includes/admin-product-actions.pug
@@ -1,5 +1,5 @@
 .card__actions
-  a.btn.btn--link.btn--card-action-btn(href=`/admin/edit-product/${product.productID}`) Edit
+  a.btn.btn--link.btn--card-action-btn(href=`/admin/edit-product/${product.id}`) Edit
   form.btn-form.btn-form--action(action='/admin/delete-product' method='POST')
-    input(type='hidden' value=`${product.productID}` name='productID')
+    input(type='hidden' value=`${product.id}` name='id')
     button.btn-form__btn(type='submit') Delete
