--- a/views/includes/product-actions.pug
+++ b/views/includes/product-actions.pug
@@ -2,4 +2,4 @@
   a.btn.btn--link.btn--card-action-btn(href=`/products/${product.id}`) Details
   form.btn-form.btn-form--action(action='/cart' method='POST')
     button.btn-form__btn(type='submit') Add to Cart
-    input(type='hidden' name='productID' value=`${product.productID}`)
+    input(type='hidden' name='id' value=`${product.id}`)
