Progress on orders model

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -185,3 +185,9 @@ main {
 .centered {
   text-align: center;
 }
+
+.flex-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
