--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,9 +1,12 @@
-.cart-list {
+.container {
   width: 100%;
   max-width: 30rem;
   margin: 0 auto;
-  padding: 0;
+}
+
+.cart-list {
   margin-bottom: 3rem;
+  padding: 0;
 }
 
 .cart-item {
